SERVER-17236 remove invalid invariant() from CachedPlanStage::isEOF()

(cherry picked from commit 978356d01c456f037efaaca9c7d2299705151e4d)